package com.stepango.blockme.feature.home.api

interface HomeFeature